samples/_failures_safe/1761395938_213b41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1f0e78e.c: In function ‘main’:
./samples/SAFE/__tmp_a1f0e78e.c:166:20: error: missing terminating " character
  166 |             printf("Decompressed data (%zu bytes):\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a1f0e78e.c:166:13: error: expected expression at end of input
  166 |             printf("Decompressed data (%zu bytes):\n
      |             ^~~~~~
./samples/SAFE/__tmp_a1f0e78e.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1f0e78e.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1f0e78e.c:166:13: error: expected declaration or statement at end of input
